# xf

./: .gitignore  Cargo.toml  plan.txt  todo.txt
src/: lib.rs  scratch.rs
src/anim/: animation.rs  animation_map.rs  animator.rs  mod.rs
src/data/: arr2d.rs  dir4.rs  dir_h.rs  mod.rs  spin.rs  void.rs
src/data/test/: arr2d.rs  dir4.rs  mod.rs
src/ds/: fifo.rs  mod.rs  queue.rs
src/ds/test/: mod.rs  queue.rs
src/gl/: bitmap.rs  color.rs  draw.rs  draw_params.rs  mod.rs  shader.rs  shader_effects.rs  texture.rs
src/gl/anim/: animation.rs  animator.rs  frame.rs  macros.rs  mod.rs  seq.rs
src/gl/anim2/: animation_map.rs
src/map/: mod.rs  tilemap.rs  tileset.rs
src/map/json/: tilemap.rs  tileset.rs
src/map/load/: mod.rs  tileset.rs
src/map/tiled_json/: mod.rs  tilemap.rs  tileset.rs
src/mq/: draw.rs  mod.rs  texture.rs  textures.rs  window.rs
src/num/: frac.rs  fvec2.rs  fvec3.rs  irect.rs  ivec2.rs  ivec3.rs  lerp.rs  limit.rs  math.rs  mod.rs  range.rs  vec2.rs  vec3.rs
src/num/test/: frac.rs  irect.rs  limit.rs  mod.rs  range.rs  vec2.rs
src/pixels/: mod.rs  pixels.rs  texture.rs  ui.rs
src/time/: countdown.rs  mod.rs  time.rs  timer.rs
src/ui/text/: font.rs  mod.rs  text.rs
