[package]
name = "xf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tiled
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
enum-utils = "0.1.2"

# Pixels
image = "0.24.1"
winit = "0.27"
pixels = "0.11"
winit_input_helper = "0.13"
strum_macros = "0.24"
png = "0.17"
